# acrivision-ban-checker

./: .env.dist  .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
cookies/: test.cookie.dist
src/: activision.py  config.py  schemes.py  telegram.py  utils.py
